<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main -->
    <string name="app_name">智能家居</string>
    <string name="welcome">欢迎使用本系统</string>

    <!-- Public -->
    <string name="action_settings">设置</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="mybreak">返回</string>
    <string name="exit">退出</string>
    <string name="usered">用户：</string>
    <string name="user">用户</string>
    <string name="passworded">密码：</string>
    <string name="password">密码</string>
    <string name="password_again">请再输入一次密码</string>

    <!-- Login -->
    <string name="title_activity_login">登录</string>

    <!-- Register -->
    <string name="title_activity_register">注册</string>
    <string name="title_activity_light">灯光</string>

    <!-- Menu -->
    <string name="title_activity_menu">功能菜单</string>
    <string name="menu">功能菜单</string>

    <!-- Setting value -->
    <string name="light">灯光</string>
    <string name="room1">房间1</string>
    <string name="room2">房间2</string>
    <string name="room3">房间3</string>
    <string name="room4">房间4</string>
    <string name="room5">房间5</string>
    <string name="curtain">窗帘</string>
    <string name="temp">温度</string>
    <string name="humidity">湿度</string>
    <string name="video">视频</string>
    <string name="title_activity_light_room">LightRoomActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
