<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/meng"
    tools:context=".Light" >

    <LinearLayout
        android:id="@+id/menu_linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp" >

            <Button
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:text="@string/room1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/room2" />

            <Button
                android:id="@+id/button4"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/room3" />

            <Button
                android:id="@+id/button1"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/room4" />

            <Button
                android:id="@+id/button4"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:text="@string/room5" />

            <Button
                android:id="@+id/button2"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignBaseline="@+id/button1"
                android:layout_alignBottom="@+id/button1"
                android:layout_alignParentRight="true"
                android:text="@string/room1" />

            <Button
                android:id="@+id/button4"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/room1" />

            <Button
                android:id="@+id/button4"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignBaseline="@+id/button1"
                android:layout_alignBottom="@+id/button1"
                android:layout_alignLeft="@+id/button3"
                android:text="@string/room5" />

            <Button
                android:id="@+id/room9"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/button4"
                android:layout_alignParentBottom="true"
                android:text="@string/room1" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_linear1"
        android:layout_marginTop="25dp" >

        <Button
            android:id="@+id/menu_textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mybreak" />
    </LinearLayout>

</RelativeLayout>