<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/meng"
    tools:context=".MenuActivity" >

    <TextView
        android:id="@+id/menu_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/menu"
        android:textSize="13pt" />

    <LinearLayout
        android:id="@+id/menu_linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp" >

            <Button
                android:id="@+id/menu_light"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:text="@string/light" />

            <Button
                android:id="@+id/menu_curtain"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/curtain" />

            <Button
                android:id="@+id/menu_temp"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/temp" />

            <Button
                android:id="@+id/menu_video"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/video" />

            <Button
                android:id="@+id/button3"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:text="灯" />

            <Button
                android:id="@+id/button5"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/menu_curtain"
                android:layout_alignParentBottom="true"
                android:text="灯" />

            <Button
                android:id="@+id/button4"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignBaseline="@+id/menu_video"
                android:layout_alignBottom="@+id/menu_video"
                android:layout_alignLeft="@+id/button5"
                android:text="灯" />

            <Button
                android:id="@+id/button2"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignBaseline="@+id/button4"
                android:layout_alignBottom="@+id/button4"
                android:layout_alignParentRight="true"
                android:text="灯" />

            <Button
                android:id="@+id/Button01"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="灯" />

        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_linear1"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/menu_textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="功能描述:" />
            
    </ScrollView>

</RelativeLayout>